methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:27: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
     faireV(); forward; left(); 
           ^